package uce.proyect.service.agreement;

import uce.proyect.models.User;

public interface UserService extends CoreService<User>{
}
